production/operations/gtd/linkace/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkace
  namespace: gtd
  labels:
    app.kubernetes.io/name: linkace
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkace
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkace
    spec:
      containers:
      - image: linkace/linkace:v1.10.1-simple
        name: linkace
        ports:
        - containerPort: 80
      restartPolicy: Always
