production/operations/gtd/linkace/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkace
  namespace: gtd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: zerossl
spec:
  tls:
  - hosts:
    - bookmarks.buvis.net
    secretName: linkace-crt
  rules:
  - host: bookmarks.buvis.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: linkace
            port:
              number: 80
